# Pascal-S_Complier

./: .gitignore  CodeGenerate.cpp  CodeGenerate.h  LICENSE  Public_define.h  README.md  SemanticAnalysis.cpp  SemanticAnalysis.h  Syntax_Tree.h
Code/: CMakeLists.txt
Code/include/: CodeGenerate.h  Public_define.h  SemanticAnalysis.h  Syntax_Tree.h  pasc.tab.h
Code/src/: CodeGenerate.cpp  SemanticAnalysis.cpp  main.cpp  pasc.tab.cpp
Code/test/: CodeGen_1_gcd.pas  CodeGen_2_qsort.pas  CodeGen_2_ssort.pas  CodeGen_3_multiv.pas  CodeGen_4_all.pas  LexicalErrorTest.pas  SemAnalysis_1.pas  SemAnalysis_2.pas  SemAnalysis_3.pas  SemAnalysis_4.pas  SemAnalysis_5.pas  SynErrorTest.pas  test.txt
Code/yacc/: lex.yy.c  pasc.l  pasc.y
code/: CMakeLists.txt  CodeGenerate.cpp  CodeGenerate.h  Public_define.h  SemanticAnalysis.cpp  SemanticAnalysis.h  Syntax_Tree.cpp  Syntax_Tree.h  lex.yy.c  lex.yy.cpp  main.cpp  makefile  pasc  pasc.l  pasc.tab.c  pasc.tab.h  pasc.y  test.txt
